Fix for overflow on swipe and add loader

--- a/areaverse/src/index.css
+++ b/areaverse/src/index.css
@@ -159,6 +159,7 @@ body {
   padding: 1rem;
   display: flex;
   height : 100vh;
+  overflow: hidden;
 }
 
 .container {
@@ -207,5 +208,15 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
   100% {
     background-position: 0% 50%;
+  }
+}
+
+@keyframes shimmer-loader {
+  from {
+    transform: translateX(-100%);
+  }
+
+  to {
+    transform: translateX(100%);
   }
 }
